--- a/styles/members.css
+++ b/styles/members.css
@@ -338,7 +338,7 @@
 
 .member-feature-icon {
     font-size: 2.5rem;
-    color: #667eea;
+    color: var(--primary-color);
     margin-bottom: 1rem;
 }
 
