--- a/styles/main.css
+++ b/styles/main.css
@@ -1817,6 +1817,19 @@ ul {
     min-height: 150px;
 }
 
+.sponsor-link {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    color: inherit;
+    cursor: pointer;
+}
+
+.sponsor-link:hover {
+    text-decoration: none;
+}
+
 .sponsor-logo-container {
     width: 100%;
     height: 100%;
